refactor:change css for PopupForControl.tsx

--- a/src/modules/usersList/components/popupForControl/PopupForControl.module.scss
+++ b/src/modules/usersList/components/popupForControl/PopupForControl.module.scss
@@ -5,8 +5,8 @@
 
   .controlElements {
     position: absolute;
-    top: -30px;
-    right: 0;
+    top: 0;
+    right: 40%;
     width: max-content;
     padding: 12px;
     background: $dark_500;
