--- a/src/common/ui/inputText/InputText.module.scss
+++ b/src/common/ui/inputText/InputText.module.scss
@@ -19,7 +19,7 @@
   padding: 5px 0;
   background: transparent;
   border: 0;
-  border-bottom: 1px solid $dark_300;
+  //border-bottom: 1px solid $dark_300;
   color: $light_900;
   font-size: 16px;
   line-height: 24px;
