--- a/src/modules/usersList/components/UsersList.module.scss
+++ b/src/modules/usersList/components/UsersList.module.scss
@@ -6,4 +6,14 @@
   border: 1px solid $dark_300;
   margin-top: 10px;
   margin-bottom: 24px;
+  display: flex;
+  align-items: center;
+
+  // ::placeholder {
+  // padding-bottom: 7px;
+  //}
+  .searchIcon {
+    margin-left: 10px;
+    margin-right: 10px;
+  }
 }
