--- a/src/modules/usersList/components/UsersList.module.scss
+++ b/src/modules/usersList/components/UsersList.module.scss
@@ -9,9 +9,14 @@
   display: flex;
   align-items: center;
 
-  // ::placeholder {
-  // padding-bottom: 7px;
-  //}
+  input[type="search"] {
+    -webkit-appearance: searchfield;
+  }
+
+  input[type="search"]::-webkit-search-cancel-button {
+    -webkit-appearance: searchfield-cancel-button;
+  }
+
   .searchIcon {
     margin-left: 10px;
     margin-right: 10px;
