--- a/src/modules/usersList/components/table/Table.module.scss
+++ b/src/modules/usersList/components/table/Table.module.scss
@@ -1,10 +1,18 @@
 .usersTable {
   thead tr th {
-    width: 25%;
     padding: 15px 25px;
     background: #171717;
     text-align: left;
     color: #fff;
+    &:first-child {
+      width: 350px;
+    }
+    &:nth-child(2),&:nth-child(3) {
+      width: 250px;
+    }
+    &:last-child {
+      width: 50px;
+    }
   }
 
   tbody tr td {
@@ -16,7 +24,7 @@
     text-overflow: ellipsis;
     white-space: nowrap;
 
-    &:last-child {
+      &:last-child {
       overflow: visible;
       text-align: center;
     }
