--- a/src/modules/usersList/components/UsersList.module.scss
+++ b/src/modules/usersList/components/UsersList.module.scss
@@ -1,25 +1,28 @@
 @import "src/assets/styles/variables";
 
-.search {
-  max-width: 666px;
-  height: 36px;
-  border: 1px solid $dark_300;
-  margin-top: 10px;
-  margin-bottom: 24px;
+.selectWrapper {
   display: flex;
-  align-items: center;
 
-  input[type="search"] {
-    -webkit-appearance: searchfield;
-  }
+  .search {
+    width: 666px;
+    height: 36px;
+    border: 1px solid $dark_300;
+    margin-bottom: 24px;
+    display: flex;
+    align-items: center;
 
-  input[type="search"]::-webkit-search-cancel-button {
-    -webkit-appearance: searchfield-cancel-button;
-  }
+    input[type="search"] {
+      -webkit-appearance: searchfield;
+    }
 
-  .searchIcon {
-    margin-left: 10px;
-    margin-right: 10px;
+    input[type="search"]::-webkit-search-cancel-button {
+      -webkit-appearance: searchfield-cancel-button;
+    }
+
+    .searchIcon {
+      margin-left: 10px;
+      margin-right: 10px;
+    }
   }
 }
 
@@ -28,7 +31,7 @@
   z-index: 999;
   top: 0;
   width: 250%;
-  margin-left:-480px;
+  margin-left: -480px;
   height: fit-content;
   background-color: white;
 }
