--- a/src/modules/usersList/components/table/Table.module.scss
+++ b/src/modules/usersList/components/table/Table.module.scss
@@ -28,7 +28,9 @@
     white-space: nowrap;
 
     &:first-child {
+      padding: 12px 5px;
       border-left: 1px solid #171717;
+      width: 40px;
     }
 
     &:last-child {
