--- a/src/modules/usersList/components/table/Table.module.scss
+++ b/src/modules/usersList/components/table/Table.module.scss
@@ -7,10 +7,15 @@
 
     &:first-child {
       width: 350px;
+
     }
 
     &:nth-child(2), &:nth-child(3) {
       width: 280px;
+    }
+
+    &:nth-child(2),&:nth-child(4)  {
+      cursor: pointer;
     }
 
     &:last-child {
